add event/by-qrcode endpoint
